--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,18 +9,22 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   background-color: #f4f4f9;
 }
 
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Pretendard', sans-serif;
+  font-family: "Pretendard", sans-serif;
   /*background-color: #EEEFF3;*/
 }
 
-#root, .app-container {
+#root,
+.app-container {
   display: flex;
   align-items: center;
   justify-content: center;
