--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,10 @@
 /* src/index.css 또는 src/App.css */
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
 
 body {
   margin: 0;
@@ -13,20 +13,31 @@ body {
     BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
     "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-  background-color: #f4f4f9;
 }
 
-body {
-  width: 100%;
-  height: 100%;
-  font-family: "Pretendard", sans-serif;
-  /*background-color: #EEEFF3;*/
-}
-
-#root,
-.app-container {
+#root {
   display: flex;
+  min-height: 100vh;
+}
+
+.content {
+  padding: 30px;
+  display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  /* background-color: aqua; */
+}
+.content.with-sidebar {
+  margin-left: 243px;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center;
+  justify-content: center; */
+  width: 100vw;
+  height: 100vh;
+  /* background-color: #ffffff; */
 }
