--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,11 +1,8 @@
-.App {
+.Home {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100%;
-  background-color: #ffffff;
 }
 
 .logo {
