--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,10 +9,22 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Pretendard Variable", Pretendard, -apple-system,
-    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
-    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-family:
+    "Pretendard Variable",
+    Pretendard,
+    -apple-system,
+    BlinkMacSystemFont,
+    system-ui,
+    Roboto,
+    "Helvetica Neue",
+    "Segoe UI",
+    "Apple SD Gothic Neo",
+    "Noto Sans KR",
+    "Malgun Gothic",
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    sans-serif;
 }
 
 #root {
@@ -22,10 +34,7 @@ body {
 
 .content {
   padding: 30px;
-  display: flex;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
+  height: 100%;
   /* background-color: aqua; */
 }
 .content.with-sidebar {
