--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -8,18 +8,31 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  box-shadow: 2px 0px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 0px 10px 0px rgba(0, 0, 0, 0.07);
   align-items: center;
 }
 
-.menu {
+.menu-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  margin-top: 30px;
+  /* margin-top: 10px; */
+  margin-bottom: 10px;
   width: 243px;
   background-color: #ffffff;
+}
+
+.menu-top {
+  margin-top: 20px;
+}
+
+.menu-cen {
+  margin-top: 10px;
+}
+
+.menu-bottom {
+  margin-top: auto;
 }
 
 .menu-item {
@@ -33,8 +46,9 @@
   text-decoration: none;
   color: #222222;
   background-color: #ffffff;
-  font-weight: 600;
+  font-weight: 500;
   height: 40px;
+  font-size: 15px;
 }
 
 .menu-item:hover {
@@ -49,9 +63,11 @@
 }
 
 .divider {
-  margin: 10px 5px;
+  margin: 0px 0;
   border: none;
-  border-top: 1px solid #d9d9d9;
+  height: 1px;
+  background-color: #aeaeae;
+  width: 100%;
 }
 
 .menu-icon {
@@ -61,9 +77,9 @@
 .icon-box {
   display: flex;
   align-items: center;
-  margin-left: 40px;
+  margin-left: auto;
   gap: 10px;
 }
 .sub-icon {
-  width: 16px;
+  width: 13px;
 }
