--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -4,8 +4,9 @@
   padding: 5px;
 }
 .practice-section {
-  height: 500px;
+  height: 55%;
+  margin-bottom: 20px;
 }
 .project-section {
-  height: 400px;
+  height: 40%;
 }
