feat: DraftDropBox isRecordable 구현 #17
녹음있는 모드 / 녹음 없이 파일만 있는 모드

--- a/frontend/src/styles/CreateDraft.css
+++ b/frontend/src/styles/CreateDraft.css
@@ -68,7 +68,7 @@
   padding: 17px 18px; /* 내부 여백 추가 */
   width: 856px;
   height: 168px;
-  background-color: #d8dbfd;
+  background-color: #ebedff;
   border-radius: 11px;
 }
 
