--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -52,7 +52,7 @@
   /* margin-block: 1px; */
 }
 
-.sub-menu-item {
+.project-item {
   display: flex;
   align-items: center;
   padding-inline-start: 50px;
