--- a/frontend/src/styles/ProjectPage.css
+++ b/frontend/src/styles/ProjectPage.css
@@ -95,6 +95,8 @@
   background-color: white;
   border-radius: 11px;
   box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.07);
+  scrollbar-width: thin;
+  scrollbar-color: #e1e1e1 transparent;
 }
 
 .pp-practice-card {
