--- a/frontend/src/styles/TableForm.css
+++ b/frontend/src/styles/TableForm.css
@@ -30,13 +30,14 @@
 }
 
 .table-container {
-  /* width: 100%; */
   flex: 1;
   min-height: 0;
   border-radius: 11px;
   overflow-y: auto;
   background-color: white;
   box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.07);
+  scrollbar-width: thin;
+  scrollbar-color: #e1e1e1 transparent;
 }
 
 .reusable-table {
