--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -101,3 +101,16 @@
 .sub-icon {
   width: 13px;
 }
+
+.project-item input {
+  border: 1px solid #bbc0fc;
+  border-radius: 11px;
+  box-shadow: none;
+  outline: none;
+  font-weight: 500;
+  height: 40px;
+  font-size: 15px;
+  color: #222222;
+  padding: 10px;
+  width: 150px;
+}
