--- a/frontend/src/styles/ProjectPage.css
+++ b/frontend/src/styles/ProjectPage.css
@@ -69,7 +69,7 @@
   display: block;
 }
 
-.pp-practice-container {
+.pp-menu-container {
   display: flex;
   flex-direction: column;
   background-color: #d8dbfd;
@@ -77,9 +77,10 @@
   min-height: 0;
   border-radius: 11px;
   box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.07);
+  margin-bottom: 30px;
 }
 
-.pp-practice-title {
+.pp-menu-title {
   padding: 10px 20px;
   color: #4350e6;
   font-size: 16px;
