--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,6 +23,7 @@ body {
 .content {
   padding: 30px;
   height: 100%;
+  overflow-y: auto;
 }
 .content.with-sidebar {
   margin-left: 243px;
@@ -32,9 +33,7 @@ body {
 .App {
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-  justify-content: center; */
   width: 100vw;
-  height: 100vh;
-  /* background-color: #ffffff; */
+  min-height: 100vh;
+  overflow: hidden;
 }
