--- a/frontend/src/styles/CreateProject.css
+++ b/frontend/src/styles/CreateProject.css
@@ -38,7 +38,7 @@
   flex-direction: column;
   background-color: #d8dbfd;
   width: 100%;
-  height: 100%;
+  min-height: 0;
   border-radius: 11px;
 }
 
@@ -56,7 +56,7 @@
 .cp-rolemodel-content {
   display: flex;
   flex-direction: column;
-  padding: 16px 0px 9px 20px;
+  padding: 16px 0px 20px 20px;
   background-color: white;
   width: 100%;
   height: 100%;
