--- a/frontend/src/styles/CreateProject.css
+++ b/frontend/src/styles/CreateProject.css
@@ -99,6 +99,7 @@
   gap: 47px;
   scroll-behavior: smooth;
   width: 100%;
+  justify-content: start;
 }
 
 .cp-selectRoleModel-scroll-container::-webkit-scrollbar {
@@ -111,4 +112,27 @@
   padding: 20px;
   border-radius: 10px;
   background-color: #d9d9d9;
+}
+
+.cp-button-container {
+  display: flex;
+  justify-content: right;
+  padding-right: 16px;
+}
+
+.cp-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 164px;
+  height: 47px;
+  border-radius: 11px;
+  background: #bbc0fc;
+  border-width: 0px;
+  color: #4350e6;
+  font-family: Pretendard;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
