--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -2,6 +2,21 @@
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   font-size: 22px;
   padding: 5px;
+  margin-bottom: 12px;
+}
+.dashboard-container {
+  width: 100%;
+  height: calc(100vh - 80px); /* 네비게이션 바 높이 등을 고려하여 조정 */
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.practice-section,
+.project-section {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 .practice-section {
   height: 55%;
