--- a/frontend/src/styles/CreateProject.css
+++ b/frontend/src/styles/CreateProject.css
@@ -111,7 +111,25 @@
   height: 437px;
   padding: 20px;
   border-radius: 10px;
-  background-color: #d9d9d9;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.cp-rolemodel-card.created {
+  background: linear-gradient(
+      0deg,
+      rgba(238, 239, 243, 0.5) 0%,
+      rgba(238, 239, 243, 0.5) 100%
+    ),
+    linear-gradient(150deg, rgba(255, 255, 255, 0) 0%, #5df7a7 100%);
+}
+
+.cp-rolemodel-card.provided {
+  background: linear-gradient(
+      0deg,
+      rgba(238, 239, 243, 0.5) 0%,
+      rgba(238, 239, 243, 0.5) 100%
+    ),
+    linear-gradient(150deg, #fff 0%, #5f5df7 251.07%);
 }
 
 .cp-button-container {
