--- a/frontend/src/styles/CreateProject.css
+++ b/frontend/src/styles/CreateProject.css
@@ -111,7 +111,9 @@
   height: 437px;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* 위-중간-아래 간격 최대 */
 }
 
 .cp-rolemodel-card.created {
@@ -132,10 +134,54 @@
     linear-gradient(150deg, #fff 0%, #5f5df7 251.07%);
 }
 
+.cp-rolemodel-card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cp-rolemodel-card-title {
+  color: #000;
+  font-feature-settings: "liga" off, "clig" off;
+  font-family: Pretendard;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 35px;
+  letter-spacing: 1px;
+}
+
+.cp-rolemodel-delete-button {
+  width: 18px;
+}
+
+.cp-rolemodel-card-analysis {
+  color: #000;
+  font-feature-settings: "liga" off, "clig" off;
+  font-family: Pretendard;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: 1px;
+}
+
+.cp-rolemodel-card-footer {
+  color: #000;
+  font-feature-settings: "liga" off, "clig" off;
+  font-family: Pretendard;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: 1px;
+}
 .cp-button-container {
   display: flex;
   justify-content: right;
   padding-right: 16px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .cp-button {
