--- a/frontend/src/styles/ProjectPage.css
+++ b/frontend/src/styles/ProjectPage.css
@@ -6,13 +6,13 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  gap: 25px;
+  gap: 15px;
 }
 
 .pp-header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .pp-left {
@@ -47,7 +47,7 @@
 
 .pp-title {
   color: #000;
-  font-size: 22px;
+  font-size: 25px;
   font-weight: 700;
   letter-spacing: 1px;
 }
