--- a/frontend/src/styles/CreateProject.css
+++ b/frontend/src/styles/CreateProject.css
@@ -116,6 +116,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between; /* 위-중간-아래 간격 최대 */
+  cursor: pointer;
 }
 
 .cp-rolemodel-card.created {
