feat: 플레이어 수정, 분석여부, 소수점, 달성여부 색

--- a/frontend/src/styles/AnalysisCard.css
+++ b/frontend/src/styles/AnalysisCard.css
@@ -26,22 +26,22 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap: 15px;
+  gap: 30px;
   padding-inline: 20px;
   margin-top: 10px;
 }
 
 .analysis-section h3,
 .achievement-section h3 {
-  font-size: 16px;
-  /* margin-bottom: 15px; */
-  font-weight: 500;
-  color: #646875;
+  font-size: 20px;
+  margin-bottom: 8px;
+  font-weight: 400;
+  color: black;
 }
 
 .analysis-section div,
 .achievement-section div {
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   font-size: 17px;
   color: black;
 }
@@ -59,8 +59,12 @@
   box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.2);
   width: 277px;
   cursor: pointer;
-  /* font-size: 25px; */
+  font-size: 15px;
 }
+/* .analysis-content-card h3 {
+  font-size: 20px;
+  font-weight: 700;
+} */
 .analysis-content-card:hover {
   background-color: #eeeff3;
 }
@@ -68,7 +72,7 @@
   box-shadow: 0px 0px 20px 0px #5f6bee;
 }
 .analysis-content-card h3 {
-  font-size: 23px;
+  font-size: 21px;
 }
 
 .achievement-status {
@@ -88,14 +92,10 @@
   gap: 10px;
 }
 
-.energy-section {
-  /* padding-inline: 20px; */
-}
-
 .graph-container {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   background-color: white;
   align-items: center;
   /* justify-content: center; */
