--- a/frontend/src/styles/AudioPlayer.css
+++ b/frontend/src/styles/AudioPlayer.css
@@ -13,14 +13,28 @@
 }
 
 .audio-player {
-  padding: 15px 25px;
+  padding: 20px 35px;
   background: white;
   border-radius: 11px;
   box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.07);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.audio-section {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* gap: 10px; */
+  width: 83%;
 }
 
 .model-info {
   margin-bottom: 15px;
+  /* width: 15%; */
 }
 
 .model-name {
@@ -32,7 +46,8 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  margin-bottom: 15px;
+  /* width: 82%; */
+  /* margin-bottom: 15px; */
 }
 
 .time-slider {
@@ -83,9 +98,10 @@
 
 .player-buttons {
   display: flex;
-  justify-content: center;
+  justify-content: end;
   gap: 10px;
   align-items: center;
+  width: 17%;
 }
 
 .control-button {
@@ -109,7 +125,10 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 14px;
+  /* font-size: 14px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: background-color 0.2s ease;
 }
 
