--- a/frontend/src/styles/AudioPlayer.css
+++ b/frontend/src/styles/AudioPlayer.css
@@ -18,7 +18,9 @@
   border-radius: 11px;
   box-shadow: 0px 0px 17px rgba(0, 0, 0, 0.07);
   display: flex;
+  width: 100%;
   flex-direction: row;
+  /* gap: 10px; */
   align-items: center;
   justify-content: space-between;
 }
@@ -29,7 +31,7 @@
   /* align-items: center; */
   /* justify-content: center; */
   /* gap: 10px; */
-  width: 83%;
+  width: 90%;
 }
 
 .model-info {
@@ -101,7 +103,7 @@
   justify-content: end;
   gap: 10px;
   align-items: center;
-  width: 17%;
+  width: 20%;
 }
 
 .control-button {
@@ -134,4 +136,22 @@
 
 .play-button:hover {
   background: white;
+}
+
+.player-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 80%;
+  height: 70px;
+  background-color: white;
+  color: #666;
+  font-size: 16px;
+  box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.07); */
+  background-color: white;
+  width: 82%;
+  min-height: 60px;
+  border-radius: 11px;
+  box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.07);
+  margin-bottom: 30px;
 }
